--- a/assets/scss/pages/_meber-collectProjects.html.scss
+++ b/assets/scss/pages/_meber-collectProjects.html.scss
@@ -1,6 +1,24 @@
 
+
+
+@media (max-width: 768px) {
+  .investor-created-title {
+    padding: 20px;
+  }
+
+  .investor-created-bady {
+    padding: 0 20px 20px 20px;
+  }
+
+  .investor-card-body{
+    padding: 20px 0;
+  }
+}
+  
+  
   @media (max-width: 768px) {
     #project-Remark {
       max-width: 20ch; 
     }
   }
+
