--- a/components/member-sidebar.ejs
+++ b/components/member-sidebar.ejs
@@ -1,5 +1,5 @@
-<div class="d-flex flex-column  p-3 text-white bg-dark sidemenu-link" >
-    <ul class="flex-column fw-bold">
+<div class="d-flex flex-column  p-3 text-white bg-gray-1000  sidemenu-link d-none d-lg-block" >
+    <ul class="flex-column fw-bold list-unstyled">
       <li class="nav-link text-gray-400 fs-4">我的帳戶</li>
       <li><a href="member.html" class="nav-link text-white fs-5 ps-1 lh-lg pt-2" >個人資料</a></li>
       <li><a href="meber-identity.html" class="nav-link text-white fs-5 ps-1 lh-lg" >身份審核</a></li>
@@ -7,46 +7,43 @@
       <li><a href="meber-points.html" class="nav-link text-white fs-5 ps-1 lh-lg">可用點數</a></li>
       <li><a href="member-settings.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">隱私設置</a></li>
     </ul>
-      <ul class="flex-column fw-bold">
+      <ul class="flex-column fw-bold list-unstyled">
         <li  class="nav-link text-gray-400 fs-4 pt-2">創業項目</li>
         <li><a href="meber-newprojects.html" class="nav-link text-white fs-5 ps-1 lh-lg">新增創業項目</a></li>
         <li><a href="meber-createdprojects.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">已建創業項目</a></li>
       </ul>
 
-      <ul class="flex-column fw-bold">
+      <ul class="flex-column fw-bold list-unstyled">
         <li class="nav-link text-gray-400 fs-4 pt-2">投資人</li>
         <li><a href="meber-newinvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">建立/修改投資人資料</a></li>
       </ul>
 
-      <ul class="flex-column fw-bold">
+      <ul class="flex-column fw-bold list-unstyled">
         <li class="nav-link text-gray-400 fs-4 pt-2">評價紀錄</li>
         <li><a href="meber-evaluateProjects.html" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目評價</a></li>
         <li><a href="meber-evaluateInvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人評價</a></li>
       </ul>
-      <ul class="flex-column fw-bold">
+      <ul class="flex-column fw-bold list-unstyled">
       <li class="nav-link text-gray-400 fs-4 pt-2">我的收藏</li>
       <li><a href="meber-collectProjects.html" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目收藏列表</a></li>
       <li><a href="meber-collectInvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人收藏列表</a></li>
     </ul>
-    <ul class="flex-column fw-bold">
+    <ul class="flex-column fw-bold list-unstyled">
     <li class="nav-link text-gray-400 fs-4 pt-2">我的活動</li>
     <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">已申請活動</a></li>
     <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">活動紀錄</a></li>
   </ul>
 
-  <ul class="flex-column fw-bold">
+  <ul class="flex-column fw-bold list-unstyled">
   <li class="nav-link text-gray-400 fs-4 pt-2">我的消息</li>
   <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">站內消息</a></li>
 </ul>
   
-<ul class="flex-column fw-bold">
+<ul class="flex-column fw-bold list-unstyled">
 <li class="nav-link text-gray-400 fs-4 pt-2">討論區</li>
 <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">新增文章</a></li>
 <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">發文列表</a></li>
 <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">查看留言</a></li>
 </ul>
+</div> 
 
-
-
-
-  </div> 
