--- a/assets/scss/pages/_ProjectList-project.scss
+++ b/assets/scss/pages/_ProjectList-project.scss
@@ -221,16 +221,7 @@
     display: none;
   }
   
-  .bg-halo {
-    // background-image: url('/assets/images/bg-halo.png');
-    background-color: $gray-1000;
-    background-image: url("/assets/images/bg-halo.png");
-    background-size: cover, contain;
-    /* 第一個背景圖片覆蓋整個元素，第二個根據內容顯示 */
-    background-position: center; /* 第一個在中央，第二個在右下角 */
-    background-repeat: no-repeat, no-repeat; /* 都不重複顯示 */
-  }
-  
+
   .features {
     padding-inline: 125px;
     @include mobile {
@@ -323,5 +314,23 @@
       width: 100%;
       height: 100px;
     }
+  }
+
+  .bg-green {
+    position: relative;
+  }
+  
+  .bg-green::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(/assets/images/bg-halo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.3; 
+    z-index: -1; 
   }
   
