--- a/components/Project-information.ejs
+++ b/components/Project-information.ejs
@@ -1,14 +1,14 @@
 <!-- 基本資訊 -->
-<div class="card bg-gray-1000">
-    <div class="container py-15">
-        <div class="row g-0 py-15">
+<div>
+    <div class="container py-10">
+        <div class="row g-0 py-10">
             <div class="border border-2">
-                    <div class="d-flex">
-                            <div class="col-3 d-flex justify-content-center align-items-center">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHXPluq6GtTRPDIHRv5kJPy86uFjp5sO7hg&s" class="img-fluid rounded" alt="logo">
+                    <div class="d-lg-flex">
+                            <div class="col-lg-4 d-flex justify-content-center align-items-center mt-4">
+                                <img src="/assets/images/mamacook.png" class="img-fluid rounded" alt="mamacook">
                             </div>
-                            <div class="col-9">
-                                    <div class="card-body">
+                            <div class="col-lg-8">
+                                    <div class="card-body ps-5">
                                                     <div class="d-flex align-items-center">
                                                         <a href="#" class="fs-1 text-primary-600 fw-bold m-1">林媽媽中式餐館<i class="bi bi-clipboard-check fs-3"></i></a>
                                                     </div>
@@ -16,33 +16,65 @@
                                                 <h5 class="fs-5 text-light m-1">產業分類：餐飲</h5>
                                                 <h5 class="fs-5 text-light m-1">規模：10人以下</h5>
                                                 <h5 class="fs-5 text-light m-1">資本額：30,00,000</h5>
-                                        <h1 class="fs-1 m-1 text-light">募資金額：50,000,000</h1>
+                                        <h1 class="fs-2 m-1 text-light">募資金額：50,000,000</h1>
                                         <p class="m-1 fs-6 text-gray-400">開始募資時間：2024/7/25</p>
                                     </div>
                             </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a href="#" class="btn login-btn btn-primary-600 mb-6 mx-6">合作聯繫<i class="bi bi-unlock ps-1"></i>
+                        <a href="#" class="btn btn-primary-600 mb-5 mx-3 rounded-2">合作聯繫<i class="bi bi-unlock ps-1"></i>
                         </a>
-                        <a href="#" class="btn login-btn btn-primary-600 mb-6 mx-6">內容解鎖<i class="bi bi-unlock ps-1"></i>
+                        <a href="#" class="btn btn-primary-600 mb-5 mx-3 rounded-2">內容解鎖<i class="bi bi-unlock ps-1"></i>
                         </a>
                     </div>
             </div>
         </div>
 
-        <div class="d-flex justify-content-between bg-gray-600">
-            <a href="Project-introduction.html"><p class="m-3 text-primary-600 fw-bolder">項目簡介</p></a>
-            <a href="Project-team.html"><p class="m-3">團隊</p></a>
-            <a href="Project-swot.html"><p class="m-3">SWOT分析</p></a>
-            <a href="Project-market.html"><p class="m-3">市場規模</p></a>
-            <a href="Project-product.html"><p class="m-3">產品</p></a>
-            <a href="Project-compete.html"><p class="m-3">競爭產品</p></a>
-            <a href="Project-model.html"><p class="m-3">商業模式</p></a>
-            <a href="Project-entrepreneur.html"><p class="m-3">創業者資訊</p></a>
-            <a href="Project-photo.html"><p class="m-3">照片參考</p></a>
-            <a href="Project-evaluate.html"><p class="m-3">創業者評價</p></a>
+        <!-- 電腦版導覽列 -->
+        <div class="d-flex justify-content-between bg-gray-600 d-none d-lg-block text-center">
+            <a href="Project-introduction.html"><p class="m-1">項目簡介</p></a>
+            <a href="Project-team.html"><p class="m-1">團隊</p></a>
+            <a href="Project-swot.html"><p class="m-1">SWOT分析</p></a>
+            <a href="Project-market.html"><p class="m-1">市場規模</p></a>
+            <a href="Project-product.html"><p class="m-1">產品</p></a>
+            <a href="Project-compete.html"><p class="m-1">競爭產品</p></a>
+            <a href="Project-model.html"><p class="m-1">商業模式</p></a>
+            <a href="Project-entrepreneur.html"><p class="m-1">創業者資訊</p></a>
+            <a href="Project-photo.html"><p class="m-1">照片參考</p></a>
+            <a href="Project-evaluate.html"><p class="m-1">創業者評價</p></a>
         </div>
-
+        
+        <!-- 手機版導覽列 -->
+        <div class="d-block d-lg-none border-bottom">
+            <a class="btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+              <div class="d-flex text-gray-100 fs-5 p-1">
+                <img src="/assets/images/icons/sidebar.png" alt="sidebar">
+                <p class=" ps-1 fw-bold">詳細資訊</p>
+              </div>
+            </a>
+            <div class="offcanvas offcanvas-start bg-gray-1000 bg-opacity-75" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+              <div class="offcanvas-header border-bottom">
+                <h5 class="offcanvas-title text-primary-600 fw-bold fs-5" id="offcanvasExampleLabel">詳細資訊</h5>
+                <button type="button" class="btn-close btn-close-white"  data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                 <div class="d-flex flex-column  p-1 text-white bg-gray-1000 bg-opacity-75 sidemenu-link" >
+                    <ul class="flex-column fw-bold list-unstyled">
+                        <li><a href="Project-introduction.html" class="nav-link text-white  ps-1 lh-lg pt-1 fs-2" >項目簡介</a></li>
+                        <li><a href="Project-team.html" class="nav-link text-white  ps-1 lh-lg fs-2" >團隊</a></li>
+                        <li><a href="Project-swot.html" class="nav-link text-white  ps-1 lh-lg fs-2" >SWOT分析</a></li>
+                        <li><a href="Project-market.html" class="nav-link text-white  ps-1 lh-lg fs-2">市場規模</a></li>
+                        <li><a href="Project-product.html" class="nav-link text-white  ps-1 lh-lg fs-2">產品</a></li>
+                        <li><a href="Project-compete.html" class="nav-link text-white  ps-1 lh-lg fs-2" >競爭產品</a></li>
+                        <li><a href="Project-model.html" class="nav-link text-white  ps-1 lh-lg fs-2" >商業模式</a></li>
+                        <li><a href="Project-entrepreneur.html" class="nav-link text-white  ps-1 lh-lg fs-2" >創業者資訊</a></li>
+                        <li><a href="Project-photo.html" class="nav-link text-white  ps-1 lh-lg fs-2" >照片參考</a></li>
+                        <li><a href="Project-evaluate.html" class="nav-link text-white  ps-1 lh-lg fs-2" >創業者評價</a></li>
+                    </ul>
+                 </div> 
+               </div>
+            </div>
+        </div>
 
     </div>
 </div>
